Workaround for expired admin password.

--- a/molecule/resources/playbooks/prepare.yml
+++ b/molecule/resources/playbooks/prepare.yml
@@ -24,3 +24,9 @@
     service:
       name: ipa
       state: started
+
+  - name: Ensure admin password is valid.
+    shell:
+      cmd: |
+        echo -e  "SomeADMINpassword\nSomeADMINpassword\nSomeADMINpassword" | kinit admin
+        kdestroy -A
